deployment/deployments.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web-app
  name: print-ip
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
      - name: web-app
        image: ${ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com/deel-print-ip:latest
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  namespace: web-app
  name: print-ip
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: web-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web-app
  name: mongodb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  namespace: web-app
  name: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: web-app
